k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-aws-monitor
  labels:
    app: flask-aws-monitor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: flask-monitor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-aws-monitor
                port:
                  number: 5001
